# Thirty_module

./: .coverage  .env_sample  .gitignore  Dockerfile  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
lms/: admin.py  models.py  paginators.py  serializers.py  tests.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_initial.py  0003_remove_course_price_remove_lesson_video_url_and_more.py
myproject/: requirements.txt
myproject/fixtures/: groups.json  initial_data.json
myproject/lms/: admin.py  models.py  serializers.py  tasks.py  tests.py  views.py
myproject/lms/migrations/: 0001_initial.py  0002_alter_course_options_alter_lesson_options_and_more.py  0003_alter_course_options_alter_lesson_options_and_more.py
myproject/myproject/: celery.py  settings.py  urls.py
myproject/users/: models.py  permissions.py  serializers.py  views.py
myproject/users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_user_managers_remove_user_avatar_and_more.py
users/: admin.py  models.py  serializers.py  tasks.py  views.py
users/migrations/: 0001_initial.py
