[tool.poetry]
name = "thirty-module"
version = "0.1.0"
description = ""
authors = ["EvgeniyRibakov <evgenijrybakov01@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django-filter = "^25.1"
django = "^4.2.7"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
stripe = "^10.7.0"
psycopg2-binary = "^2.9.9"
celery = { version = "^5.4.0", extras = ["redis"] }
redis = "^5.0.8"
django-celery-beat = "^2.7.0"
pillow = "^11.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"